# ggoober

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release-plz.yml
src/: cli.rs  main.rs
