[package]
name = "ggober"
version = "0.1.2"
edition = "2024"
description = "Clean removable build and cache artifacts from code folders"
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
console = "0.16.3"
dialoguer = "0.12.0"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.23.0"
